lintian (2.2.6) UNRELEASED; urgency=low

  * Summary of tag changes:
    + Added
      - binary-from-other-architecture
      - icon-size-and-directory-name-mismatch
      - lzma-deb-archive
      - multiple-distributions-in-changes-file (disabled)
      - unsupported-source-format

  * checks/binaries:
    + [RA] When checking for dependencies on libc, don't use /o on the
      regex.  Otherwise, lintian produces false positives when run on
      multiple packages with different architectures, since the libc
      package name is not the same on all architectures.  Thanks to
      Raphael Geissert for the report.  (Closes: #516067)
    + [RA] Check for binaries from other architectures than the declared
      architecture of the package outside of known multiarch directories.
      Patch from Raphael Geissert.  (Closes: #513996)
  * checks/common_data.pm:
    + [RA] Virtual packages now come from data.
  * checks/changelog-file:
    + [RA] Don't warn about uncompressed ChangeLog files in doc.  They may
      be small files and the maintainer may be installing some other
      upstream file as the upstrema changelog.  (Closes: #515601)
    + [RA] Fix improbable-bug-number-in-closes so that it works.
  * checks/control-file:
    + [ADB] Properly exclude packages built from the glibc source package
      from the "hardcoded depends on libc" test.  (Closes: #515831)
  * checks/cruft:
    + [RA] For Format: 2.0 and Format: 3.0 (quilt) packages, check
      the *.debian.tar.(gz|bz2|lzma) contents instead of expecting
      diffstat output.  (Closes: #515069)
    + [RA] Ignore cruft in the upstream source in directories that look
      like part of a test suite.  The files may be part of the test
      cases.  (Closes: #515137)
  * checks/deb-format{,.desc}:
    + [RA] Recognize data.tar.lzma binary package components and use a
      different tag than malformed-deb-archive.
  * checks/description:
    + [ADB] Warn of homepages embedded in the description which use the