@@ -212,7 +212,8 @@ Info: This ELF binary appears to have been built for an architecture other
 
 Tag: spelling-error-in-binary
 Severity: normal
-Certainty: possible
+Certainty: wild-guess
+Experimental: yes
 Info: Lintian found a spelling error in the given binary.  Lintian has a list
  of common misspellings that it looks for.  It does not have a dictionary
  like a spelling checker does.
