@@ -1,0 +1,7 @@
+#include <stdio.h>
+
+int
+main(void)
+{
+    printf("I iz an exprimental speling error!\n");
+}
