@@ -1,0 +1,6 @@
+Testname: binaries-spelling
+Sequence: 6000
+Version: 1.0
+Description: Spelling errors in binaries
+Architecture: any
+Test-For: spelling-error-in-binary
